samples/_failures_safe/1761040037_9ff082_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c815090a.c: In function ‘main’:
./samples/SAFE/__tmp_c815090a.c:142:16: error: missing terminating " character
  142 |         printf("Decompression verification failed.\
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c815090a.c:142:9: error: expected expression at end of input
  142 |         printf("Decompression verification failed.\
      |         ^~~~~~
./samples/SAFE/__tmp_c815090a.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c815090a.c:142:9: error: expected declaration or statement at end of input
